Updated Hand Rank Display